# Esp32-S3-HotTub-Base

./: .gitignore  CMakeLists.txt  README.md  copy_firmware_bins.sh  partitions.csv  sdkconfig  sdkconfig.defaults  wifi_credentials.env.example  wifi_credentials.h.in
components/app_controller/: CMakeLists.txt
components/app_controller/include/: app_controller.h  hot_tub_app.h
components/app_controller/src/: app_controller.c  hot_tub_app.c
components/app_watchdog/: CMakeLists.txt  README.md
components/app_watchdog/include/: app_watchdog.h
components/app_watchdog/src/: app_watchdog.c
components/ble_service/: CMakeLists.txt
components/ble_service/include/: ble_service.h  hot_tub_ble_service.h
components/ble_service/src/: ble_service.c  hot_tub_ble_service.c
components/device_state/: CMakeLists.txt
components/device_state/include/: hot_tub_device_state.h
components/device_state/src/: hot_tub_device_state.c
components/hot_tub_controller/: CMakeLists.txt
components/hot_tub_controller/include/: hot_tub_controller.h
components/hot_tub_controller/src/: hot_tub_controller.c  hot_tub_controller.cpp
components/json_service/: CMakeLists.txt
components/json_service/include/: json_rpc.h  json_service.h
components/json_service/src/: json_rpc.c  json_service.c
components/ntp_time_sync/: CMakeLists.txt
components/ntp_time_sync/example/: ntp_time_sync_example.c
components/ntp_time_sync/include/: ntp_time_sync.h
components/ntp_time_sync/src/: ntp_time_sync.c
components/nvs_storage/: CMakeLists.txt
components/nvs_storage/include/: nvs_storage.h
components/nvs_storage/src/: nvs_storage.c
components/ota_manager/: CMakeLists.txt
components/ota_manager/include/: hot_tub_ota_manager.h  ota_manager.h
components/ota_manager/src/: hot_tub_ota_manager.c  ota_manager.c
components/psram_allocator/: CMakeLists.txt
components/psram_allocator/include/: psram_allocator.h  psram_allocator_c.h
components/psram_allocator/src/: psram_allocator.c  psram_allocator.cpp
components/rgb_led/: CMakeLists.txt
components/rgb_led/include/: rgb_led.h
components/rgb_led/src/: CMakeLists.txt  rgb_led.c
components/storage/: CMakeLists.txt
components/storage/include/: hot_tub_storage.h
components/storage/src/: hot_tub_storage.c
components/system_status/: CMakeLists.txt
components/system_status/include/: system_status.h
components/system_status/src/: system_status.c
components/web_server/: CMakeLists.txt
components/web_server/include/: hot_tub_web_server.h  web_server.h
components/web_server/src/: hot_tub_web_server.c  web_server.c
components/wifi_manager/: CMakeLists.txt
components/wifi_manager/include/: hot_tub_wifi_manager.h  wifi_manager.h
components/wifi_manager/src/: hot_tub_wifi_manager.c  wifi_manager.c
littlefs/www/: app.js  crc32_wrapper.js  index.html  styles.css
main/: CMakeLists.txt  app_main.c  idf_component.yml
public/: system_status.c
